[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Thor-Hammer"
version = "0.0.4"
authors = [
  { name="Galen Seilis", email="galen.seilis@seilis.ca" },
]
description = "Defeating causal dragons with interpretable machine learning informed by causal assumptions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
	"gplearn",
	"mapie",
	"networkx",
	"numpy",
	"pandas",
	"scikit-learn",
	"sympy"
]

[project.urls]
"Homepage" = "https://github.com/galenseilis/Mjolnir"
"Bug Tracker" = "https://github.com/galenseilis/Mjolnir/issues"
